tests/NormalTests/paczka1/fuzzy1/80571407.err
Error in line 15: 41zTYPM8vO A819 9,67
Error in line 2: TaXwM S203 18,0
Error in line 18: ONznIpRjVwY A819 32,4
Error in line 31: S555 SC03 68,1
Error in line 27: ONznIpRjVwY S203 32,2
Error in line 34: TaXwM S203 32,8
